# spy-game

./: Dockerfile  docker-compose.yml  docker-entrypoint.sh  gunicorn-conf.py  pyproject.toml  server.py
spy_game/: app.py
spy_game/api/: game.py
spy_game/settings/: conf.py
templates/: character_info.html  discussion_stage.html  home.html  question_stage.html  setup_game.html  show_player.html  victory.html  welcome.html
