[tool.poetry]
name = "spy_game"
version = "1.5.4"
description = "SPY Super game"
authors = []
license = ""

[tool.poetry.dependencies]
python = "^3.12.4"
fastapi = "^0.115.1"
uvicorn = "^0.30.1"
toml = "^0.10.2"
asyncio = "^3.4.3"
pydantic-settings = "^2.3.3"
sentry-sdk = "^2.6.0"
python-json-logger = "^2.0.7"
gunicorn = "^22.0.0"
ujson = "^5.10.0"
redis = "^5.0.8"
cryptography = "^43.0.1"
python-multipart = "^0.0.17"
uvloop = "^0.21.0"


[tool.poetry.group.dev.dependencies]
ipdb = "==0.13.13"
black = "==23.7.0"
darglint = "==1.8.1"
factory_boy = "==3.3.0"
flake8 = "==6.0.0"
flake8-bandit = "==4.1.1"
flake8-comprehensions = "==3.14.0"
flake8-eradicate = "==1.5.0"
flake8-isort = "==6.0.0"
flake8-spellcheck = "==0.28.0"
bandit = "==1.7.4"
isort = "==5.12.0"
pep8-naming = "==0.13.3"
pre-commit = "==3.3.3"
pre-commit-hooks = "==4.4.0"
safety = "==2.4.0b1"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-httpx = "^0.30.0"
mypy = "^1.10.0"
types-toml = "^0.10.8.20240310"
types-ujson = "^5.10.0.20240515"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']
line-length = 120
skip-string-normalization = true
exclude = '''
(
    \.venv
)
'''

[tool.isort]
profile = "black"
force_single_line=true
order_by_type=false
line_length = 120
skip = '.venv'
src_paths = ['transaction_service']